--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.js"
+    "build-dev": "webpack-dev-server  --config webpack.dev.js",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   },
   "keywords": [],
   "author": "",
