--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.72.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "supertest": "^7.0.0",
     "webpack": "^5.90.3",
     "webpack-dev-server": "^5.0.2",
     "workbox-webpack-plugin": "^7.0.0"
